# simple_stream_room

./: Dockerfile  main.py  pyproject.toml
public/: index.html  script.js  styles.css  video-skin.css
public/components/menubar/: menubar.css  menubar.js
public/components/modal/: modal.css  modal.js
